domain/src/main/java/com/example/domain/error/ErrorTypeEnum.java
package com.example.domain.error;

public enum ErrorTypeEnum {

    RESOURCE_NOT_FOUND,
    MALFORMED_INPUT,
    UNEXPECTED_ERROR_IN_APPLICATION
}
